logs/devin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/devin'...
Listing './lib/python3.5/site-packages/devin/submodule'...
Compiling './lib/python3.5/site-packages/devin/submodule/csv_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/csv_helper.py", line 22
    except IOError as (error_no, strerror):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/devin/submodule/email_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/email_helper.py", line 74
    print "Starting to fetch the latest email!"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devin/submodule/http_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/http_helper.py", line 9
    print "Post with data ", data_dict
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devin/submodule/image_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/image_helper.py", line 24
    print "deprecated method for windows system!"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devin/submodule/nltk_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/nltk_helper.py", line 70
    print feature_names[col], ' - ', _tfs[0, col]
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devin/submodule/pattern_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/pattern_helper.py", line 45
    print type(s)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/devin/submodule/position_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/position_helper.py", line 120
    print year_convert['four year']
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devin/submodule/segment_helper.py'...
***   File "./lib/python3.5/site-packages/devin/submodule/segment_helper.py", line 126
    print SegmentHelper.normalize("build ... model")
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/devin/submodule/tests'...
Listing './lib/python3.5/site-packages/devin/tests'...
Listing './lib/python3.5/site-packages/devin-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
